--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,7 @@ a {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.45); /* tweak opacity as needed */
+  /* tweak opacity as needed */
   z-index: 1;
 }
 
@@ -546,6 +546,6 @@ a {
 }
 @media (min-width: 1440px) {
   .banner-text h1 {
-    font-size: 4.5rem !important;
+    font-size: 2.5rem !important;
   }
 }
